# obs-QR-Block

./: .gitignore  CMakeLists.txt  README.md  rebuild.cmd
cmake/: gen_import_lib.cmake
data/locale/: en-US.ini  zh-CN.ini
src/: qr-blocker-filter.c
